fix sticky-top z-index

--- a/src/assets/styles/_global-mixins.scss
+++ b/src/assets/styles/_global-mixins.scss
@@ -49,7 +49,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1000;
 }
 
 @mixin equals($size: 1em, $shade: $blue-400) {
